--- a/index.html
+++ b/index.html
@@ -4,26 +4,155 @@
     <meta charset="UTF-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exdos - Creative agency HTML5 website template</title>
+    <title>UpSkill - Educational HTML5 Template</title>
     <!-- Place favicon.ico in the root directory -->
     <link
       rel="shortcut icon"
-      href="./src/img/favicon.png"
+      href="/src/img/site-icon.png"
       type="image/x-icon"
     />
     <!-- CSS links here  -->
     <link rel="stylesheet" href="./src/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/src/css/font-awesome-pro.css" />
-    <link rel="stylesheet" href="/src/css/flaticon_exdos.css" />
     <link rel="stylesheet" href="/src/css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/src/css/spacing.min.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
   </head>
   <body>
+    <!-- start ts-header section -->
+    <header class="ts-header ts-border">
+      <!-- start ts-header-top area -->
+      <div class="ts-header__top ts-bg-secondary">
+        <div class="container">
+          <div class="ts-header__wrapper ts-text-center">
+            <p>Intro price. Get UpSkill for Big Sale -95% off.</p>
+          </div>
+        </div>
+      </div>
+      <!-- end ts-header-top area -->
+      <!-- start ts-header-middle area -->
+      <div class="ts-header__middle">
+        <div class="container-fluid p-0 d-flex align-items-center">
+          <div class="ts-header__logo ml-60">
+            <a href="index.html"><img src="./src/img/upskill.svg" alt=""></a>
+          </div>
+          <div class="ts-header__left ml-30">
+            <div class="ts-header__wrapper d-flex align-items-center">
+              <div class="ts-header__menu">
+                <nav>
+                  <ul>
+                    <li><a href="#">Categories <i class="fa-regular fa-angle-down"></i></a></li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="ts-header__search ml-40">
+                <form action="#">
+                  <div class="ts-header__search-group p-relative">
+                    <input type="text" placeholder="Search for anything">
+                    <button class="ts-header__search-icon">
+                      <svg width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M8.29409 2.125C4.61679 2.125 1.63574 5.10605 1.63574 8.78335C1.63574 12.4606 4.61679 15.4417 8.29409 15.4417C11.9714 15.4417 14.9524 12.4606 14.9524 8.78335C14.9524 5.10605 11.9714 2.125 8.29409 2.125ZM0.385742 8.78335C0.385742 4.4157 3.92644 0.875 8.29409 0.875C12.6617 0.875 16.2024 4.4157 16.2024 8.78335C16.2024 13.151 12.6617 16.6917 8.29409 16.6917C3.92644 16.6917 0.385742 13.151 0.385742 8.78335Z" fill="#585D69"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M13.0938 13.5829C13.3379 13.3389 13.7336 13.3389 13.9777 13.5829L16.4527 16.0579C16.6967 16.302 16.6967 16.6977 16.4527 16.9418C16.2086 17.1859 15.8129 17.1859 15.5688 16.9418L13.0938 14.4668C12.8497 14.2227 12.8497 13.827 13.0938 13.5829Z" fill="#585D69"/>
+                      </svg>
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="ts-header__right pr-60 ms-auto d-flex justify-content-end">
+            <div class="ts-header__menu">
+              <nav class="ts-header__menu-content">
+                <ul>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Courses</a></li>
+                  <li><a href="#">Pages <i class="fa-regular fa-angle-down"></i></a></li>
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">Features</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="ts-header__bar ml-15 d-flex align-items-center">
+              <div class="ts-header__cart">
+                <button>
+                  <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M9 0.1875C6.80888 0.1875 4.99966 1.82137 4.72388 3.9375H4.22694C3.48017 3.93748 2.8609 3.93745 2.3749 4.00537C1.86397 4.07675 1.40487 4.23439 1.05572 4.62448C0.706572 5.01457 0.600605 5.48827 0.586075 6.00395C0.572253 6.49449 0.640659 7.10996 0.723148 7.85212L0.954067 9.93038C1.12659 11.4832 1.26208 12.7028 1.49222 13.6506C1.72811 14.6222 2.07895 15.3804 2.73029 15.9634C3.38225 16.5469 4.17836 16.8115 5.17541 16.9385C6.14886 17.0625 7.38497 17.0625 8.95988 17.0625H9.04012C10.615 17.0625 11.8511 17.0625 12.8245 16.9385C13.8216 16.8115 14.6177 16.5469 15.2697 15.9634C15.921 15.3804 16.2718 14.6222 16.5077 13.6506C16.7379 12.7028 16.8734 11.4832 17.0459 9.93045L17.2768 7.85212C17.3593 7.10997 17.4277 6.49448 17.4139 6.00395C17.3993 5.48827 17.2934 5.01457 16.9442 4.62448C16.5951 4.23439 16.136 4.07675 15.6251 4.00537C15.1391 3.93745 14.5198 3.93748 13.773 3.9375H13.2761C13.0003 1.82142 11.1911 0.1875 9 0.1875ZM9 1.3125C10.5685 1.3125 11.8724 2.44549 12.1381 3.9375H5.86191C6.12746 2.44553 7.43152 1.3125 9 1.3125ZM1.89399 5.37476C1.99202 5.26523 2.14758 5.17306 2.53057 5.11954C2.92953 5.0638 3.46952 5.0625 4.26844 5.0625H13.7315C14.5304 5.0625 15.0704 5.0638 15.4693 5.11954C15.8524 5.17306 16.0079 5.26523 16.1059 5.37476C16.204 5.48429 16.2785 5.64907 16.2893 6.03564C16.3007 6.43831 16.2424 6.97514 16.1541 7.76918L15.9323 9.76612C15.7543 11.3677 15.6257 12.5155 15.4145 13.3852C15.2072 14.2393 14.9359 14.7523 14.5194 15.1251C14.1035 15.4973 13.5612 15.7106 12.6824 15.8225C11.7883 15.9365 10.6237 15.9375 9 15.9375C7.37621 15.9375 6.21171 15.9365 5.31755 15.8225C4.43873 15.7106 3.89647 15.4973 3.48058 15.1251C3.06407 14.7523 2.79283 14.2393 2.58546 13.3852C2.3743 12.5155 2.24569 11.3677 2.06773 9.76612L1.84585 7.76918C1.75762 6.97514 1.69928 6.43831 1.71063 6.03564C1.72152 5.64907 1.79596 5.48429 1.89399 5.37476Z" fill="#131836"/>
+                  </svg>
+                </button>
+              </div>
+              <div class="ts-header__btn ml-20">
+                <a href="#" class="ts-btn mr-10 ts-btn__secondary">Log In</a>
+                <a href="#" class="ts-btn ts-btn__primary">Sign Up</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end ts-header-middle area -->
+    </header>
+    <!-- end ts-header section -->
+    <main>
+      <!-- start ts-hero section -->
+      <section class="ts-hero ts-border pt-70 pb-80">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-7">
+              <div class="ts-hero__wrapper">
+                <div class="ts-hero__heading mb-15">
+                  <h3 class="ts-section__subtitle ts-section__subtitle-border">
+                    <i class="fa-sharp fa-solid fa-bolt"></i>
+                    The Leader in Online Learning</h3>
+                  <h1 class="ts-section__title ts-text-primary mt-10">Get <i class="ts-text-secondary">2500+</i> Best Online 
+                    Courses From UpSkilll</h1>
+                </div>
+                <p>Start, switch, or advance your career with more than 5,000 courses, <br/> Professional Certificates, and degrees from world-class universities and <br/> companies.</p>
+
+                <div class="ts-hero__bottom d-flex align-items-center mt-30">
+                  <div class="ts-hero__btn mr-20">
+                    <a href="#" class="ts-btn mr-15 ts-btn__primary">Get Started <i class="fa-regular fa-arrow-up"></i></a>
+                    <a href="#" class="ts-btn ts-btn__secondary">Explore Courses <i class="fa-regular fa-arrow-up"></i></a>
+                  </div>
+
+                  <div class="ts-satisfaction d-flex align-items-center">
+                    <div class="ts-satisfaction__thumb mr-20">
+                      <span><img src="./src/img/hero/thumb.jpg" alt=""></span>
+                      <span><img src="./src/img/hero/thumb.jpg" alt=""></span>
+                      <span><img src="./src/img/hero/thumb.jpg" alt=""></span>
+                    </div>
+                    <div class="ts-satisfaction__des ml-20">
+                      <span class="ts-starts">
+                        <i class="fa-sharp fa-solid ts-text-secondary fa-star"></i>
+                        <i class="fa-sharp fa-solid ts-text-secondary fa-star"></i>
+                        <i class="fa-sharp fa-solid ts-text-secondary fa-star"></i>
+                        <i class="fa-sharp fa-solid ts-text-secondary fa-star"></i>
+                        <i class="fa-sharp fa-solid ts-text-secondary fa-star"></i>
+                      </span>
+                      <h3 class="ts-satisfaction__title">35k+ happy students</h3>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-5">
+              <div class="ts-hero__wrapper ts-text-right">
+                <img src="./src/img/hero/img.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end ts-hero section -->
+    </main>
+
+
+
+
+
+
     <!-- JS links here -->
-    <script src="./src/js/bootstrap.bundle.min.js"></script>
-    <script src="./src/js/jquery-3.7.1.min.js"></script>
-    <script src="./src/js/swiper-bundle.min.js"></script>
+    <script src="./src/js/vendor/bootstrap.bundle.min.js"></script>
+    <script src="./src/js/vendor/jquery-3.7.1.min.js"></script>
+    <script src="./src/js/vendor/swiper-bundle.min.js"></script>
     <script src="./src/js/app.js"></script>
   </body>
 </html>
