--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <!-- Place favicon.ico in the root directory -->
     <link
       rel="shortcut icon"
-      href="/src/img/site-icon.png"
+      href="/assets/img/site-icon.png"
       type="image/x-icon"
     />
     <!-- CSS links here  -->
-    <link rel="stylesheet" href="./src/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/src/css/font-awesome-pro.css" />
-    <link rel="stylesheet" href="/src/css/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/src/css/spacing.min.css" />
-    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/css/font-awesome-pro.css" />
+    <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="/assets/css/spacing.min.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <!-- start ts-header section -->
@@ -34,7 +34,7 @@
       <div class="ts-header__middle">
         <div class="container-fluid p-0 d-flex align-items-center">
           <div class="ts-header__logo ml-60">
-            <a href="index.html"><img src="./src/img/upskill.svg" alt=""></a>
+            <a href="index.html"><img src="./assets/img/upskill.svg" alt=""></a>
           </div>
           <div class="ts-header__left ml-30">
             <div class="ts-header__wrapper d-flex align-items-center">
@@ -115,9 +115,9 @@
 
                   <div class="ts-satisfaction d-flex align-items-center">
                     <div class="ts-satisfaction__thumb mr-20">
-                      <span><img src="./src/img/hero/thumb.jpg" alt=""></span>
-                      <span><img src="./src/img/hero/thumb.jpg" alt=""></span>
-                      <span><img src="./src/img/hero/thumb.jpg" alt=""></span>
+                      <span><img src="./assets/img/hero/thumb.jpg" alt=""></span>
+                      <span><img src="./assets/img/hero/thumb.jpg" alt=""></span>
+                      <span><img src="./assets/img/hero/thumb.jpg" alt=""></span>
                     </div>
                     <div class="ts-satisfaction__des ml-20">
                       <span class="ts-starts">
@@ -135,7 +135,7 @@
             </div>
             <div class="col-lg-5">
               <div class="ts-hero__wrapper ts-text-right">
-                <img src="./src/img/hero/img.png" alt="">
+                <img src="./assets/img/hero/img.png" alt="">
               </div>
             </div>
           </div>
@@ -150,9 +150,9 @@
 
 
     <!-- JS links here -->
-    <script src="./src/js/vendor/bootstrap.bundle.min.js"></script>
-    <script src="./src/js/vendor/jquery-3.7.1.min.js"></script>
-    <script src="./src/js/vendor/swiper-bundle.min.js"></script>
-    <script src="./src/js/app.js"></script>
+    <script src="./assets/js/vendor/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/vendor/jquery-3.7.1.min.js"></script>
+    <script src="./assets/js/vendor/swiper-bundle.min.js"></script>
+    <script src="./assets/js/app.js"></script>
   </body>
 </html>
